--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.steffy.mines</groupId>
     <artifactId>Mines</artifactId>
-    <version>1.1</version>
+    <version>RELEASE-1.1</version>
     <build>
         <plugins>
             <plugin>
